--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,12 @@
 /* =================================== */
 /*  Basic Style 
 /* =================================== */
+
+
+
+
+
+/*endProductDetail*/
 ::-moz-selection {
   /* Code for Firefox */
   background-color: #b68834;
@@ -2286,7 +2292,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   background: url(../img/header-bg.jpg) center;
   background-size: cover;
 }
-
 @media (max-width: 1199.98px) {
   .banner-area .fullscreen {
     height: 920px !important;
