--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7425,7 +7425,8 @@ h1, h2, h3, h4, h5,
   .ftco-navbar-light .navbar-nav > .nav-item.cta.cta-colored span {
     border-color: #c49b63; }
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #c49b63; }
+    color: #c49b63;
+}
     .ftco-navbar-light .navbar-nav > .nav-item.active > a:after {
       opacity: 1;
       background: #c49b63; }
@@ -8474,10 +8475,10 @@ textarea.form-control {
         color: black !important;
         border: 2px solid #000; }
 
-.ftco-animate {
+/*.ftco-animate {
   opacity: 0;
   visibility: hidden; }
-
+*/
 .bg-primary {
   background: #c49b63 !important; }
 
