--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -50,7 +50,7 @@ span .sa{
   top: 50px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-
+  margin-left: -30px;
   padding: 12px 16px;
   text-decoration: none;
   text-align: center;
@@ -137,7 +137,7 @@ h6, .h6 {
 }
 
 .icon-close{
-
+  margin-left: 60px;
   font-size: 16px;
   cursor: pointer;
 }
